# weather-data-public

./: .gitignore  README.md  compute_daily_metric.py  compute_zipcode_stations.py  download_ncei.py  download_stations.py  download_storm_events.py  download_zipcode.py  export_to_parquet.py  ghcn_daily_readme.txt  pyproject.toml  readme-by_year.txt  run_duckdb_ui.sh
.github/workflows/: download_daily_metrics.yml  download_ncei.yml  download_storm_events.yml
