[project]
name = "weather-data-public"
version = "0.1.0"
description = ""
authors = [
    {name = "Di Wu",email = "di.wu@shadowfaxdata.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb (>=1.2.2,<2.0.0)",
    "s3cmd (>=2.4.0,<3.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "ruff (>=0.11.9,<0.12.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
